--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+  </head>
 
-<body>
-    <div class="navbar">
-        <div class="header">
-            <img id="tentacles" src="assets/tentacles.png">
-            <h1 class="header-text">Sea Monster Crowdfunding</h1>
-        </div>
-        <div class="nav-links">
-            <input type="text" id="search-input" placeholder="Search for a game">
-            <button id="our-games-btn">Our Games</button>
-        </div>
+  <body>
+    <!-- header row with logo -->
+    <div class="header">
+        <img id="tentacles" src="assets/tentacles.png">
+        <h1 class="header-text">Sea Monster Crowdfunding</h1>
     </div>
 
     <!-- background info about company -->
@@ -30,15 +24,18 @@
     <div class="stats-container">
         <div class="stats-card">
             <h3>Individual Contributions</h3>
-            <p id="num-contributions"></p>
+            <p id="num-contributions">
+            </p>
         </div>
         <div class="stats-card">
             <h3>Total Raised</h3>
-            <p id="total-raised"></p>
+            <p id="total-raised">
+            </p>
         </div>
         <div class="stats-card">
             <h3>Total Number of Games</h3>
-            <p id="num-games"></p>
+            <p id="num-games">
+            </p>
         </div>
     </div>
     <div class="stats-container" id="top-games">
@@ -51,16 +48,17 @@
     </div>
 
     <!-- list of games funded by Sea Monster -->
-    <h2 id="our-games">Our Games</h2>
+    <h2>Our Games</h2>
     <p>Check out each of our games below!</p>
     <div id="button-container">
         <button id="unfunded-btn">Show Unfunded Only</button>
         <button id="funded-btn">Show Funded Only</button>
         <button id="all-btn">Show All Games</button>
     </div>
-    <div id="games-container"></div>
+    <div id="games-container">
+
+    </div>
 
     <script type="module" src="index.js"></script>
-</body>
-
+  </body>
 </html>
